--- a/src/MEO.Frontend/angular.json
+++ b/src/MEO.Frontend/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "minha-escola-online": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "minha-escola-online"
+    }
+  },
+  "defaultProject": "minha-escola-online",
+  "cli": {
+    "analytics": false
+  }
 }
